[package]
name = "eth"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = { git = "https://github.com/gakonst/ethers-rs" }
anyhow = "1.0.39"
serde = { version = "1.0.124", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.5", features = ["full"] }
serde_json = { version = "1.0" }